css/style.css
.content{
    max-width: 720px;
    width: 100%;
    margin: 0 auto;
}
.item{
    padding: 40px 20px;
}
.item:target tr{
    display: table-row !important;
}
a{
    color: #3190FF;
}
.header{
    background: #3190ff;
    padding: 30px;
}
.header input{
    font-size: 150%;
    padding: 20px;
    outline: none;
    border: none;
    background: white;
    text-align: center;
}
.title{
    display: inline;
    word-wrap:break-word;
}
.title a{
    color: black;
    text-decoration: none;
}

/* Show only the last 5 updates */
tbody{
    cursor: pointer;
}
.shortTable tr{
    display: none;
}
.shortTable tr:nth-last-child(-n+5){
    display: table-row;
}

